# fipe-api

./: .env-example  Dockerfile  Makefile  README.md  cloudbuild.yaml  database.py  docker-compose.yml  pyproject.toml
api_1/: main.py  utils.py
api_1/repository/: fipe_api1_repository.py
api_1/services/: marca_service.py  utils.py
api_1/tests/: test_api.py
api_1/web/: main.py
api_2/: main.py  schema.py  utils.py
api_2/repository/: fipe_api2_repository.py
api_2/services/: utils.py  veiculo_service.py
api_2/tests/: test_api.py
api_2/web/: main.py  schema.py
common/: constants.py  consumer.py  database.py
common/database/: __init__.py  firestore.py  mongo.py
